Changes in 1.1.0 (7 Feb 2013)
- rename db_path to lock_file_path.

First Release in 1.0.0 (5 Feb 2013)